fix styling for overflow-x

--- a/fest-website/src/pages/events/index.css
+++ b/fest-website/src/pages/events/index.css
@@ -14,7 +14,7 @@ body {
   position: sticky;
   top: 0;
   left: 0;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   background-image: url("../../assets/eventbg.png");
   background-size: cover;
@@ -63,7 +63,7 @@ body {
   position: sticky;
   top: 0;
   left: 0;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   background-color: #0000008f;
   z-index: 1;
